erDiagram
    USER ||--o{ STUDENT_RECORD : "Creates"
    ADMIN ||--o{ STUDENT_RECORD : "Monitors"
    STUDENT_RECORD ||--|| PREDICTION : "Generates"
    
    USER {
        int id PK
        string username
        string email
        string role "Student/Admin"
        boolean is_verified
    }
    
    STUDENT_RECORD {
        int id PK
        int user_id FK
        float study_hours
        float sleep_hours
        float attendance_percentage
        float mental_health_score
        float screen_time
    }
    
    PREDICTION {
        int id PK
        int student_record_id FK
        float predicted_score
        string risk_level
        string feature_explanations "SHAP Data"
    }

    EMAIL_VERIFY_OTP {
        int id PK
        string email
        string otp
        boolean is_used
    }
